--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   web:
     build: .
     volumes:
-      - .:/app
+      - .:/dockerPJ
     ports:
       - "8000:8000"
     command: python manage.py runserver 0.0.0.0:8000
