--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+
 services:
   web:
     build: .
@@ -10,10 +10,12 @@ services:
     restart: always
     container_name: django-app
   
-  # frontend:
-  #   build: ./frontend
-  #   ports:
-  #     - "3000:3000"
-  #   container_name: react-app
-  #   volumes:
-  #     - ./frontend:/app
+  frontend:
+    build: .
+    volumes:
+      - .:/react_pj
+    ports:
+      - "3000:3000"
+    command: npm start
+    restart: always
+    container_name: react-app
